--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my 3rd repo</title>
+    <link rel="stylesheet" href="Repo.css">
+    <style>
+        
+    </style>
 </head>
 <body>
+    <h1>Hello Github</h1>
+    <DIV>
+        <P style="color: blanchedalmond;padding: 20;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil illo vel iusto eius eos cupiditate recusandae corrupti odio, nesciunt assumenda blanditiis voluptas fugiat. Quibusdam sapiente veritatis provident cum, officiis aspernatur.</P>
+        <BUTTon >lEARN MORE</BUTTon>
+    </DIV>
     
 </body>
 </html>
