--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <DIV>
         <P style="color: blanchedalmond;padding: 20;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil illo vel iusto eius eos cupiditate recusandae corrupti odio, nesciunt assumenda blanditiis voluptas fugiat. Quibusdam sapiente veritatis provident cum, officiis aspernatur.</P>
         <BUTTon >lEARN MORE</BUTTon>
-    </DIV>
+    </DIV><br>
+    <img width="100" height="100" src="3.jpg" alt="">
+
     
 </body>
 </html>
